correct link index

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <a href="./01-arrays/script.js">arrays </a>
-    <a href="./02-arrays-bonus/script.js"> array-bonus</a>
+    <a href="./01-arrays/index.html">arrays </a>
+    <a href="./02-arrays-bonus/index.html"> array-bonus</a>
   </body>
 </html>
